fix spacing

--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,8 @@ body {
     flex-direction: column;
     align-content: space-between;
     justify-content: center;
-    gap: 5%;
+    justify-items: center;
+    gap: 5vh;
     margin: 0;
     background-color: #fbfbfb;
 }
